add plant growth depending on deylight and clownfish eating phytoplankton